@@ -1,8 +1,10 @@
 package app.product;
 
+import app.diary.Diary;
+import app.nutrients.Nutrients;
 import app.user.User;
+import app.util.exceptions.InvalidInputException;
 import com.fasterxml.jackson.annotation.JsonBackReference;
-import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonManagedReference;
 import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
@@ -11,8 +13,14 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.math.BigDecimal;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.math.RoundingMode;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+
+import static app.nutrients.NutrientsMapper.mapNutrientsToNutrients;
+import static app.product.ProductMapper.mapMeasureDtoToMeasure;
 
 @Data
 @Entity
@@ -24,69 +32,71 @@ public class Product {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    private String productId;
-
     private String name;
 
-    private BigDecimal kcal;
+    @OneToOne(cascade = CascadeType.ALL,
+            fetch = FetchType.EAGER,
+            orphanRemoval = true)
+    @JsonManagedReference
+    private Nutrients nutrients;
 
-    private BigDecimal protein;
+    private String currentlyUsedMeasureName;
 
-    private BigDecimal fat;
-
-    private BigDecimal carbohydrates;
-
-    private BigDecimal fiber;
+    private BigDecimal quantity;
 
     private String image;
 
-    private boolean isUsed;
-
     private String query;
 
-    @OneToMany(
-            cascade = CascadeType.ALL,
-            fetch = FetchType.EAGER
-    )
+    @OneToMany(cascade = CascadeType.ALL,
+            fetch = FetchType.EAGER,
+            mappedBy = "product",
+            orphanRemoval = true)
     @JsonManagedReference
     private List<Measure> measures;
 
     @ManyToOne
-    @JoinColumn(name = "user_id")
     @JsonBackReference
     private User user;
 
-    static List<Product> parseProductsFromResponseDto(ResponseDTO response, String query, User user) {
-        List<Product> products = new ArrayList<>();
-        if (response == null) {
-            return products;
-        }
-        for (HintDTO hint : response.getHints()) {
-            FoodDTO food = hint.getFood();
-            Map<String, BigDecimal> nutrients = food.getNutrients();
+    @ManyToOne
+    @JsonBackReference
+    @JoinColumn(name = "diary")
+    private Diary diary;
 
+    static List<Product> parseProductsFromResponseDto(ResponseDto response,
+                                                      String query,
+                                                      User user) {
+        if (response == null) {
+            return Collections.emptyList();
+        }
+        List<Product> products = new ArrayList<>();
+
+        for (HintDto hint : response.getHints()) {
+            FoodDto food = hint.getFood();
+            Map<String, BigDecimal> nutrients = food.getNutrients();
 
 
             Product product = new Product();
             checkIfFieldsAreNotNullAndSetValues(
                     product,
-                    food.getFoodId(),
                     food.getLabel(),
-                    nutrients.get("ENERC_KCAL"),
-                    nutrients.get("PROCNT"),
-                    nutrients.get("FAT"),
-                    nutrients.get("CHOCDF"),
-                    nutrients.get("FIBTG"),
                     food.getImage(),
                     query
             );
 
-            List<Measure> measures = hint.getMeasures().stream().map(measureDto -> Measure.builder()
-                    .name(measureDto.getLabel())
-                    .weight(measureDto.getWeight())
-                    .build()).collect(Collectors.toList());
+            List<Measure> measures = hint.getMeasures().stream()
+                    .map(measureDto -> mapMeasureDtoToMeasure(measureDto, product))
+                    .toList();
 
-            product.setUsed(false);
+            Nutrients nutrientsForProduct = createNutrients(nutrients);
+            nutrientsForProduct.setProduct(product);
+
+            Measure usedMeasure = searchForMeasure(measures, "Gram");
+
+            product.setCurrentlyUsedMeasureName(usedMeasure.getName());
+            product.setQuantity(BigDecimal.valueOf(100));
+            product.setNutrients(nutrientsForProduct);
             product.setMeasures(measures);
             product.setUser(user);
             products.add(product);
@@ -95,25 +105,30 @@ public class Product {
     }
 
 
-    static void checkIfFieldsAreNotNullAndSetValues(Product product,
-                                                    String foodId,
-                                                    String label,
-                                                    BigDecimal kcal,
-                                                    BigDecimal protein,
-                                                    BigDecimal fat,
-                                                    BigDecimal carbohydrates,
-                                                    BigDecimal fiber,
-                                                    String image,
-                                                    String query
+    private static Nutrients createNutrients(Map<String, BigDecimal> nutrients) {
+        return Nutrients.builder()
+                .kcal(valueOrZero(nutrients.get("ENERC_KCAL")))
+                .proteinQuantityInGrams(valueOrZero(nutrients.get("PROCNT")))
+                .carbohydratesQuantityInGrams(valueOrZero(nutrients.get("CHOCDF")))
+                .fatQuantityInGrams(valueOrZero(nutrients.get("FAT")))
+                .fiberQuantityInGrams(valueOrZero(nutrients.get("FIBTG")))
+                .build();
+    }
+
+    private static Measure searchForMeasure(List<Measure> measures, String measureLabel) {
+        return measures.stream()
+                .filter(m -> m.getName().equals(measureLabel))
+                .findFirst()
+                .orElseThrow(() -> new InvalidInputException("Measure not found"));
+    }
+
+    private static void checkIfFieldsAreNotNullAndSetValues(Product product,
+                                                            String label,
+                                                            String image,
+                                                            String query
     ) {
 
-        product.setProductId(valueOrEmpty(foodId));
         product.setName(valueOrEmpty(label));
-        product.setKcal(valueOrZero(kcal));
-        product.setProtein(valueOrZero(protein));
-        product.setFat(valueOrZero(fat));
-        product.setCarbohydrates(valueOrZero(carbohydrates));
-        product.setFiber(valueOrZero(fiber));
         product.setImage(valueOrEmpty(image));
         product.setQuery(query);
     }
@@ -124,6 +139,30 @@ public class Product {
 
     static String valueOrEmpty(String textValue) {
         return textValue == null ? "" : textValue;
+    }
+
+    public void editProductAmount(String newMeasureLabel, BigDecimal newQuantity) {
+        Measure newMeasure = searchForMeasure(measures, newMeasureLabel);
+        Measure currentlyUsedMeasure = searchForMeasure(measures, currentlyUsedMeasureName);
+
+        BigDecimal newKcalQuantity = nutrients.getKcal().multiply(newQuantity.multiply(newMeasure.getWeight()).divide(quantity.multiply(currentlyUsedMeasure.getWeight()), 2, RoundingMode.HALF_UP));
+        BigDecimal newProteinQuantity = nutrients.getProteinQuantityInGrams().multiply(newQuantity.multiply(newMeasure.getWeight()).divide(quantity.multiply(currentlyUsedMeasure.getWeight()), 2, RoundingMode.HALF_UP));
+        BigDecimal newCarbohydratesQuantity = nutrients.getCarbohydratesQuantityInGrams().multiply(newQuantity.multiply(newMeasure.getWeight()).divide(quantity.multiply(currentlyUsedMeasure.getWeight()), 2, RoundingMode.HALF_UP));
+        BigDecimal newFatQuantity = nutrients.getFatQuantityInGrams().multiply(newQuantity.multiply(newMeasure.getWeight()).divide(quantity.multiply(currentlyUsedMeasure.getWeight()), 2, RoundingMode.HALF_UP));
+        BigDecimal newFiberQuantity = nutrients.getFiberQuantityInGrams().multiply(newQuantity.multiply(newMeasure.getWeight()).divide(quantity.multiply(currentlyUsedMeasure.getWeight()), 2, RoundingMode.HALF_UP));
+
+        Nutrients newNutrients = Nutrients.builder()
+                .kcal(newKcalQuantity)
+                .proteinQuantityInGrams(newProteinQuantity)
+                .carbohydratesQuantityInGrams(newCarbohydratesQuantity)
+                .fatQuantityInGrams(newFatQuantity)
+                .fiberQuantityInGrams(newFiberQuantity)
+                .product(this)
+                .build();
+
+        quantity = newQuantity;
+        currentlyUsedMeasureName = newMeasure.getName();
+        mapNutrientsToNutrients(nutrients, newNutrients);
     }
 }
 
